--- a/_layouts/default2.html
+++ b/_layouts/default2.html
@@ -2,7 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>{{ page.title | default: "Mi Web" }}</title>
+    <title>{{ page.title | default: "Mi Web de la 3 y 4" }}</title>
+    <header> Encabezado 3 y 4</header>
 </head>
 <body>
     <div class="topnav">
@@ -15,7 +16,7 @@
         {{ content }}
     </div>
     <div class="footer">
-        <p>Gabriel Lungu pagina 3 y 4</p>
+        
     </div>
 </body>
 </html>
