--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,8 @@
         {{ content }}
     </div>
     <div class="footer">
-        <p>Gabriel Lungu pagina 3 y 4</p>
+      <footer>Gabriel Lungu pagina 1 y 2</footer>
+        
     </div>
 </body>
 </html>
